try to resolve conflict

--- a/README.html
+++ b/README.html
@@ -404,6 +404,11 @@ scrapped from <a href="https://open-meteo.com/">Openmeteo
 API</a>.</p></li>
 </ul>
 </div>
+<div id="repo" class="section level1">
+<h1>Repo</h1>
+<p>See data analysis codes in <code>index.qmd</code>; rshinydashboard
+codes in <code>RESPweather_dashboard</code>.</p>
+</div>
 <div id="about-us" class="section level1">
 <h1>About Us</h1>
 <p><strong>Team MMI</strong> are <strong>Yunyi Ru</strong> (email: <a href="mailto:yru3@jh.edu" class="email">yru3@jh.edu</a>; GitHub: <a href="https://github.com/yunyi-ru" class="uri">https://github.com/yunyi-ru</a>) and <strong>Juanyu
