fix minor errors

--- a/README.html
+++ b/README.html
@@ -10,9 +10,8 @@
 
 
 
-<meta name="date" content="2024-12-11" />
 
-<title>Weather-Respiratory Diseases Correlation Explorer</title>
+<title>README</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
@@ -349,10 +348,6 @@ display: none;
 
 
 
-<h1 class="title toc-ignore">Weather-Respiratory Diseases Correlation
-Explorer</h1>
-<h4 class="author">Team MMI</h4>
-<h4 class="date">2024-12-11</h4>
 
 </div>
 
@@ -381,16 +376,16 @@ changes</strong> may increase the risk of disease outbreaks.</p>
 <div id="features" class="section level1">
 <h1>Features</h1>
 <ul>
-<li><p><strong>Weekly Rates</strong>: This dashboard uses <a href="#id_#%20Respiratory%20Virus%20Related%20Hospitalization%20Rate">CDC
+<li><p><strong>Weekly Rates</strong>: This dashboard uses <a href="https://data.cdc.gov/Public-Health-Surveillance/Rates-of-Laboratory-Confirmed-RSV-COVID-19-and-Flu/kvib-3txy/about_data">CDC
 RESP-NET data</a> to give an overview of influenza and rsv
 hospitalization rates of each state from 2018 to 2024. The user can
 select year, state, and pathogen of interest using the interactive
 filters.</p></li>
-<li><p><strong>Weather Explorer</strong>: This dashboard integrates <a href="#id_##%20Environmental%20Parameters">environmental parameter
-data</a> from openmeteo API and respiratory virus-associated
-hospitalization rate data to perform regression analysis. The user can
-select year, state, weather variable and pathogen of interest using the
-interactive filters.</p></li>
+<li><p><strong>Weather Explorer</strong>: This dashboard integrates <a href="https://open-meteo.com/">environmental parameter data</a> from
+openmeteo API and respiratory virus-associated hospitalization rate data
+to perform regression analysis. The user can select year, state, weather
+variable and pathogen of interest using the interactive
+filters.</p></li>
 </ul>
 </div>
 <div id="data" class="section level1">
@@ -404,10 +399,13 @@ scrapped from <a href="https://open-meteo.com/">Openmeteo
 API</a>.</p></li>
 </ul>
 </div>
-<div id="repo" class="section level1">
-<h1>Repo</h1>
+<div id="repo-navigation" class="section level1">
+<h1>Repo Navigation</h1>
 <p>See data analysis codes in <code>index.qmd</code>; rshinydashboard
-codes in <code>RESPweather_dashboard</code>.</p>
+codes in <code>RESPweather_dashboard</code>; project final write up in
+<code>final_write_up.pdf</code>; project proposal in
+<code>proposal</code>; raw data in <code>data</code>.</p>
+<hr />
 </div>
 <div id="about-us" class="section level1">
 <h1>About Us</h1>
@@ -419,9 +417,8 @@ repository</a>.</p>
 <li><p>Last maintained: 2024-12-19</p></li>
 <li><p>CDC data update: 2024-11-30</p></li>
 </ul>
-<p><em>This dashboard is made by <a href="https://rstudio.github.io/shinydashboard/">r shinydashboard</a>
-for a class project of Johns Hopkins University <a href="https://www.stephaniehicks.com/jhustatprogramming2024/">Biostatistics
-140.777 Statistical Programming Paradigms</a></em>.</p>
+<p><em>This is a class project of Johns Hopkins University <a href="https://www.stephaniehicks.com/jhustatprogramming2024/">Biostatistics
+140.777 Statistical Programming Paradigms</a> course</em>.</p>
 </div>
 
 
