--- a/RESPweather_dashboard/about.html
+++ b/RESPweather_dashboard/about.html
@@ -391,7 +391,7 @@ filters.</p>
 </div>
 <div id="weather-explorer" class="section level3">
 <h3>Weather Explorer</h3>
-<p>This dashboard integrated <a href="#id_##%20Environmental%20Parameters">environmental parameter
+<p>This dashboard integrates <a href="#id_##%20Environmental%20Parameters">environmental parameter
 data</a> from openmeteo API and respiratory virus-associated
 hospitalization rate data to perform regression analysis. The user can
 select year, state, weather variable and pathogen of interest using the
@@ -420,7 +420,7 @@ significantly during and after the COVID-19 pandemic.</p>
 </div>
 <div id="environmental-parameters" class="section level3">
 <h3>Environmental Parameters</h3>
-<p>Weather data were scrapped from <a href="https://open-meteo.com/">Openmeteo API</a>.å</p>
+<p>Weather data were scrapped from <a href="https://open-meteo.com/">Openmeteo API</a>.</p>
 <div id="correlation-heatmap" class="section level4">
 <h4>Correlation Heatmap</h4>
 <p>From the figure below, we can see that respiratory virus associated
